feat: mobile footer completed

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="logoContainer">
           <img class="logo" src="./images/logo.svg" alt="" srcset="">
         </div>
-        <ul>
+        <ul class="navlist">
           <li><a href="">Features</a></li>
           <li><a href="">Team</a></li>
-          <li><a href="">Sign In</a></li>
+          <li><a href="">Sign in</a></li>
         </ul>
       </nav>
     </header>
@@ -109,8 +109,8 @@
             Get early access today
           </h2>
           <p class="hero__signup__summary footer__hero__signup__summary">
-            It only takes a minute to sign up and our free starter tier is extremely generous.
-            If you have any questions, our support team would be happy to help you.
+            it only takes a minute to sign up and our free starter tier is extremely generous.
+            if you have any questions, our support team would be happy to help you.
           </p>
           <form class="footer__form form">
             <input type="email" name="" id="emailAddress" class="email" placeholder="Enter your email.">
@@ -160,7 +160,7 @@
             </div>
           </div>
           <div class="aboutus">
-            <ul>
+            <ul class="navlist__footer">
               <li> About Us </li>
               <li>Jobs </li>
               <li>Press </li>
@@ -168,7 +168,7 @@
             </ul>
           </div>
           <div class="contactus">
-            <ul>
+            <ul class="navlist__footer">
               <li>Contact Us </li>
               <li> Terms </li>
               <li> Privacy </li>
@@ -176,9 +176,16 @@
           </div>
           <div class="socials">
           <!-- <i class="fab fa-facebook"></i> -->
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
+          <div class="social__links">
+            <a class="fab fa-facebook-f"></a>            
+          </div>
+          <div class="social__links">
+            <a class="fab fa-twitter"></a>            
+          </div>
+          <div class="social__links">
+            <a class="fab fa-instagram"></a>
+          </div>
+            
 
           </div>
         </div>
