--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             Access them wherever you need, share and collaborate with friends,
             family, and co-workers.
           </p>
-          <form class="hero__form form">
-            <input type="email" name="" id="emailAddress" class="email" placeholder="Enter your email.">
+          <form class="hero__form">
+            <input type="email" name="emailValid" id="" class="email" placeholder="Enter your email.">
             <input type="submit" value="Get Started" class="btnSubmit">
           </form>
         </div>
@@ -80,8 +80,7 @@
             </button>
 
             <div class="card">
-              <figure class="card__quorte">
-                <!--  <img class="quorte__quorte__img" src="./images/icon-quotes.svg" alt="" srcset=""> -->
+              <figure class="card__quorte">                
                 <blockquote class="card__quorte__summary">
                   Fylo has improved our team productivity by an order of magnitude. Since
                   making the switch our team has become a well-oiled collaboration machine.
@@ -114,8 +113,8 @@
               if you have any questions, our support team would be happy to help you.
             </p>
           </div>
-          <form class="footer__form form">
-            <input type="email" name="" id="emailAddress" class="email footer__email" placeholder="Enter your email.">
+          <form class="footer__form">
+            <input type="email" name="emailValid" id="" class="email footer__email" placeholder="Enter your email.">
             <input type="submit" value="Get Started For Free" class="btnSubmit footer__btnSubmit">
           </form>
         </div>
@@ -145,7 +144,7 @@
         <div class="contact">
           <div class="phone__email">
             <div class="phone">
-              <svg class="phone__logo" width="18" height="18" xmlns="http://www.w3.org/2000/svg">
+              <svg  width="18" height="18" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M17 12.5c-1.2 0-2.4-.2-3.6-.6-.3-.1-.7 0-1 .2l-2.2 2.2c-2.8-1.4-5.1-3.8-6.6-6.6l2.2-2.2c.3-.3.4-.7.2-1-.3-1.1-.5-2.3-.5-3.5 0-.6-.4-1-1-1H1C.4 0 0 .4 0 1c0 9.4 7.6 17 17 17 .6 0 1-.4 1-1v-3.5c0-.6-.4-1-1-1zM16 9h2c0-5-4-9-9-9v2c3.9 0 7 3.1 7 7zm-4 0h2c0-2.8-2.2-5-5-5v2c1.7 0 3 1.3 3 3z"
                   fill="#FFF" fill-rule="evenodd" />
@@ -153,7 +152,7 @@
               <span>Phone: +1-543-123-4567</span>
             </div>
             <div class="email__data">
-              <svg class="email__data__logo" width="20" height="16" xmlns="http://www.w3.org/2000/svg">
+              <svg width="20" height="16" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M18 0H2C.9 0 0 .9 0 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2zm0 14h-2V5.2L10 9 4 5.2V14H2V2h1.2L10 6.2 16.8 2H18v12z"
                   fill="#FFF" fill-rule="evenodd" />
@@ -176,16 +175,15 @@
               <li> Privacy </li>
             </ul>
           </div>
-          <div class="socials">
-            <!-- <i class="fab fa-facebook"></i> -->
+          <div class="socials">           
             <div class="social__links">
-              <a class="fab fa-facebook-f"></a>
+              <a class="fab fa-facebook-f" aria-label="visit my facebook page" href=""></a>
             </div>
             <div class="social__links">
-              <a class="fab fa-twitter"></a>
+              <a class="fab fa-twitter" aria-label="visit my twitter page" href=""></a>
             </div>
             <div class="social__links">
-              <a class="fab fa-instagram"></a>
+              <a class="fab fa-instagram" aria-label="visit my instagram page" href=""></a>
             </div>
 
 
