--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             family, and co-workers.
           </p>
           <form class="hero__form">
-            <input type="email" name="emailValid" id="" class="email" placeholder="Enter your email.">
+            <label for="emailValid">
+              <input type="email" aria-label="email details" name="emailValid" id="" class="email"
+                placeholder="Enter your email.">
+            </label>
             <input type="submit" value="Get Started" class="btnSubmit">
           </form>
         </div>
@@ -80,7 +83,7 @@
             </button>
 
             <div class="card">
-              <figure class="card__quorte">                
+              <figure class="card__quorte">
                 <blockquote class="card__quorte__summary">
                   Fylo has improved our team productivity by an order of magnitude. Since
                   making the switch our team has become a well-oiled collaboration machine.
@@ -114,7 +117,10 @@
             </p>
           </div>
           <form class="footer__form">
-            <input type="email" name="emailValid" id="" class="email footer__email" placeholder="Enter your email.">
+            <label for="emailValid">
+              <input type="email" aria-label="email details" name="emailValid" id="" class="email footer__email"
+                placeholder="Enter your email.">
+            </label>
             <input type="submit" value="Get Started For Free" class="btnSubmit footer__btnSubmit">
           </form>
         </div>
@@ -144,7 +150,7 @@
         <div class="contact">
           <div class="phone__email">
             <div class="phone">
-              <svg  width="18" height="18" xmlns="http://www.w3.org/2000/svg">
+              <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M17 12.5c-1.2 0-2.4-.2-3.6-.6-.3-.1-.7 0-1 .2l-2.2 2.2c-2.8-1.4-5.1-3.8-6.6-6.6l2.2-2.2c.3-.3.4-.7.2-1-.3-1.1-.5-2.3-.5-3.5 0-.6-.4-1-1-1H1C.4 0 0 .4 0 1c0 9.4 7.6 17 17 17 .6 0 1-.4 1-1v-3.5c0-.6-.4-1-1-1zM16 9h2c0-5-4-9-9-9v2c3.9 0 7 3.1 7 7zm-4 0h2c0-2.8-2.2-5-5-5v2c1.7 0 3 1.3 3 3z"
                   fill="#FFF" fill-rule="evenodd" />
@@ -175,15 +181,15 @@
               <li> Privacy </li>
             </ul>
           </div>
-          <div class="socials">           
+          <div class="socials">
             <div class="social__links">
-              <a class="fab fa-facebook-f" aria-label="visit my facebook page" href=""></a>
+              <a class="fab fa-facebook-f" id="facebook" aria-label="visit my facebook page" href=""><span class="accessCtrl"></span></a>
             </div>
             <div class="social__links">
-              <a class="fab fa-twitter" aria-label="visit my twitter page" href=""></a>
+              <a class="fab fa-twitter" id="twitter" aria-label="visit my twitter page" href=""><span class="accessCtrl"></span></a>
             </div>
             <div class="social__links">
-              <a class="fab fa-instagram" aria-label="visit my instagram page" href=""></a>
+              <a class="fab fa-instagram" id="instagram" aria-label="visit my instagram page" href=""><span class="accessCtrl"></span></a>
             </div>
 
 
