fix: second accessibilty report fix

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
       <nav>
         <div class="logoContainer">
-          <img class="logo" src="./images/logo.svg" alt="" srcset="">
+          <img class="logo" src="./images/logo.svg" alt="">
         </div>
         <ul class="navlist">
           <li><a class="navlist__header__links" href="">Features</a></li>
@@ -47,7 +47,7 @@
           </p>
           <form class="hero__form">
             <label for="emailValid">
-              <input type="email" aria-label="email details" name="emailValid" id="" class="email"
+              <input type="email" aria-label="email details" name="emailValid" id="emailValid" class="email"
                 placeholder="Enter your email.">
             </label>
             <input type="submit" value="Get Started" class="btnSubmit">
@@ -77,9 +77,9 @@
               </p>
             </div>
             <button class="productive__btn">
-              <a href="" class="productive__btn--a">See how Fylo works
+              <span class="productive__btn--a">See how Fylo works
                 <img src="./images/icon-arrow.svg" alt="">
-              </a>
+              </span>
             </button>
 
             <div class="card">
@@ -117,8 +117,8 @@
             </p>
           </div>
           <form class="footer__form">
-            <label for="emailValid">
-              <input type="email" aria-label="email details" name="emailValid" id="" class="email footer__email"
+            <label for="emailValid2">
+              <input type="email" aria-label="email details" name="emailValid" id="emailValid2" class="email footer__email"
                 placeholder="Enter your email.">
             </label>
             <input type="submit" value="Get Started For Free" class="btnSubmit footer__btnSubmit">
