btn display for footer fixed

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </p>
           </div>
           <form class="footer__form">
-            <label for="emailValid2">
+            <label class="footer__form__label" for="emailValid2">
               <input type="email" aria-label="email details" name="emailValid" id="emailValid2" class="email footer__email"
                 placeholder="Enter your email.">
             </label>
