email validation html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
           </p>
           <form class="hero__form">
             <label for="emailValid">
-              <input type="email" aria-label="email details" name="emailValid" id="emailValid" class="email"
+              <input type="email" aria-label="email details" required
+              name="emailValid" id="emailValid" class="email" autocomplete="email"
                 placeholder="Enter your email.">
             </label>
             <input type="submit" value="Get Started" class="btnSubmit">
@@ -118,7 +119,8 @@
           </div>
           <form class="footer__form">
             <label class="footer__form__label" for="emailValid2">
-              <input type="email" aria-label="email details" name="emailValid" id="emailValid2" class="email footer__email"
+              <input type="email" aria-label="email details" name="emailValid"
+               id="emailValid2" required class="email footer__email" autocomplete="email"
                 placeholder="Enter your email.">
             </label>
             <input type="submit" value="Get Started For Free" class="btnSubmit footer__btnSubmit">
@@ -168,17 +170,17 @@
           </div>
           <div class="aboutus">
             <ul class="navlist__footer">
-              <li> About Us </li>
-              <li>Jobs </li>
-              <li>Press </li>
-              <li> Blog </li>
+              <li><a href="">About Us</a></li>
+              <li><a href="">Jobs</a></li>
+              <li><a href="">Press</a></li>
+              <li><a href="">Blog</a></li>
             </ul>
           </div>
           <div class="contactus">
             <ul class="navlist__footer">
-              <li>Contact Us </li>
-              <li> Terms </li>
-              <li> Privacy </li>
+              <li><a href="">Contact Us</a></li>
+              <li><a href="">Terms</a></li>
+              <li><a href="">Privacy</a></li>
             </ul>
           </div>
           <div class="socials">
@@ -199,7 +201,7 @@
     </footer>
 
   </div>
-  <script src="./main.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
