polishing up - margins and paddings

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             family, and co-workers.
           </p>
           <form class="hero__form">
-            <label for="emailValid">
+            <label for="emailValid" class="label__hero">
               <input type="email" aria-label="email details" required
               name="emailValid" id="emailValid" class="email hero__email" autocomplete="email"
                 placeholder="Enter your email.">
