feat: js code factoring out

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <input type="email" aria-label="email details" name="emailValid"
                id="emailValid2" required class="email footer__email" autocomplete="email"
                 placeholder="Enter your email.">
-                <span class="errorMsg__footer">Please check your email</span>
+                <span class="errorMsg errorMsg__footer">Please check your email</span>
             </label>
             <input type="submit" value="Get Started For Free" class="btnSubmit footer__btnSubmit">
           </form>
